--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
     <title>手書きホワイトボード(Canvasサンプル)</title>
-    <link rel="stylesheet" type="text/css" href="wboard.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <audio id="ClickSound" preload="auto">
@@ -20,7 +20,7 @@
             </p>
         </form>
         <canvas id="drawArea"></canvas>
-        <script src="wboard.js"></script>
+        <script src="index.js"></script>
     </div>
 </body>
 </html>
