--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
     <title>手書きホワイトボード(Canvasサンプル)</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/ktr003/wboard2.github.io/blob/main/index.css">
 </head>
 <body>
     <audio id="ClickSound" preload="auto">
