--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </p>
         </form>
         <canvas id="drawArea"></canvas>
-        <script src="index.js"></script>
+        <script src="https://github.com/ktr003/wboard2.github.io/blob/main/index.js"></script>
     </div>
 </body>
 </html>
